# Sidcraft

./: .gitignore  CMakeLists.txt  Chunk.h  DepthShader.vs  GameEngine  Makefile  README.md  Random.h  SkyboxShader.fs  SkyboxShader.vs  TextureAtlas.h  Tree.h  camera.h  cubemap.h  lightingShader.fs  lightingShader.vs  main.cpp  matrix.h  mesh.h  model.h  shader.fs  shader.h  shader.vs  vector.h  world.h
GameEngine.dSYM/Contents/Resources/DWARF/: GameEngine
dependencies/include/glad/: glad.h
include/: Block.h  Camera.h  Chunk.h  ChunkManager.h  Cube.h  Entity.h  Light.h  Matrix.h  Mesh.h  MouseHandler.h  Player.h  Quad.h  Renderer.h  Shader.h  Skybox.h  TextureAtlas.h  Tree.h  Vector.h  Vegetation.h  World.h
shaders/: BlendShader.fs  BlendShader.vs  BlurShader.fs  BlurShader.vs  DepthShader.fs  DepthShader.gs  DepthShader.vs  HDRShader.fs  MainShader.fs  MainShader.vs  QuadShader.fs  QuadShader.vs  SkyShader.fs  SkyShader.vs  SkyboxShader.fs  SkyboxShader.vs  WaterShader.fs  WaterShader.vs  shader.fs  shader.vs  shadow.fs  shadow.vs
src/: Camera.cpp  Chunk.cpp  ChunkManager.cpp  Cube.cpp  Entity.cpp  Light.cpp  Matrix.cpp  Mesh.cpp  MouseHandler.cpp  Player.cpp  Quad.cpp  Renderer.cpp  Shader.cpp  Skybox.cpp  TextureAtlas.cpp  Tree.cpp  Vector.cpp  Vegetation.cpp  World.cpp  glad.c  main.cpp
